implementa plano 3